# dert

./: .gitignore  .gitmodules
.gitlab/issue_templates/: Ideal Data Verification.md  Ideal Demo and Inspection Verification.md  Nonideal Data Verification.md  Nonideal Demo and Inspection Verification.md
builds/: 2022-05-31-main.uf2  2022-06-02-main-demo.uf2
dert/: CMakeLists.txt
dert/board/: dert_2040.h
dert/include/: FreeRTOSConfig.h  dert.h  dert_i2c.h  dert_report_data_task.h  dert_sense_air_task.h  dert_sense_light_task.h  dert_sense_soil_task.h  dert_toggle_relays_task_test.h  freertos_sdk_config.h
dert/src/: CMakeLists.txt  dert_i2c.c  dert_report_data_task.c  dert_sense_air_task.c  dert_sense_light_task.c  dert_sense_soil_task.c  dert_toggle_relays_task_test.c  main.c
dert/src/freertos/: CMakeLists.txt  dert.h  dert_freertos.c  dert_i2c.c  dert_report_data_task.c  dert_sense_air_task.c  dert_sense_light_task.c  dert_sense_soil_task.c  main.c
dert/src/usb/: CMakeLists.txt  dert_usb.c  dert_usb.h
docs/bh1750-verf/: 2022-05-22-rev100-bh1750-rx-err.sal  LuxData.csv
docs/chirp-verf/: StcData.csv  SwcData.csv
docs/sht30-verf/: ArhData.csv  AtfData.csv
docs/uart-verf/: 2022-05-29-uart-verf.txt  2022-05-31-uart-extended-verf.txt  README.md
